# BioHue

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml
backend/: .env.example  main.py  pyproject.toml
backend/src/: api.py  config.py  database.py  process_image.py  substrates.json
backend/src/routes/: images.py  users.py
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/: DarkModeToggle.tsx  NavBar.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/context/: AuthContext.tsx
