[project]
name = "BioHue"
version = "0.1.0"
description = ""
authors = [
    {name = "Chaitanya-Keyal",email = "chaitanyakeyal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.10.6,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "bcrypt (==4.0.1)",
    "itsdangerous (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
